c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_local_var.c
struct s;

int main(void) {
  // can't define a local variable (or any variable) with incomplete type
  struct s v;
  return 0;
}